Updated the version to RC1.

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.morethanheroic</groupId>
   <artifactId>warc</artifactId>
-  <version>1.0</version>
+  <version>1.0-RC1</version>
   <packaging>jar</packaging>
   <name>Java WARC</name>
   <description>A WARC file reader in Java.</description>
