--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,4 @@
-group=com.morethanheroic
-version=1.0.0-RC1
+group=com.bottomlessarchive
+version=1.0.0
+name=Java WARC
+description=A WARC file reader and parser written in Java.
