--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-group=com.bottomlessarchive
+group=com.github.bottomlessarchive
 version=1.0.0
 name=Java WARC
 description=A WARC file reader and parser written in Java.
