#3 - Added a new parameter to the WarcRecordStreamFactory methods.

--- a/java-warc/build.gradle
+++ b/java-warc/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+    compile group: 'org.jetbrains', name: 'annotations', version: '18.0.0'
+
     compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.13'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
