--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ group=com.github.bottomless-archive-project
 version=1.1.0
 name=Java WARC
 description=A WARC file reader and parser written in Java.
+ossrhUsername=
+ossrhPassword=
